<resources>
    <string name="app_name">Introduce Myself</string>
    <string name="Persanal_record">ประวัติส่วนตัว</string>
    <string name="Persanal_record_en">Persanal_Record</string>
    <string name="Name">ชื่อ: ชยุตม์ ยุทธพรพงศ์ </string>
    <string name="Name_en">Name : Chayut Yuttapornpong</string>
    <string name="Age">อายุ : 21</string>
    <string name="Address">ที่อยู่ : 351/4 ม.11 ต.กระบี่น้อย อ.เมือง จ.กระบี่ 81000</string>
    <string name="Hobby">งานอดิเรก : อ่านหนังสือ ดูหนัง ฟังเพลง เล่นเกม</string>
    <string name="Skill">ความสามารถพิเศษ : เล่นดนตรีไทย-สากล</string>
    <string name="close_button">ปิด</string>
    <string name="Music">เพลงที่ชอบ</string>
    <string name="playmusic">เล่น</string>
    <string name="Stop">หยุด</string>
    <string name="Zutomayo">あいつら全員同窓会</string>
    <string name="img_Activity">กิจกรรมที่เข้าร่วม</string>
    <string name="Contact">ช่องทางติดต่อ</string>
    <string name="Back">กลับหน้าหลัก</string>
    <string name="Video">วิดิโอการบรรเลงดนตรี</string>
    <string name="satukarn">บรรเลงดนตรีไทยประกอบพีธีไหว้ครู</string>
    <string name="Spring_thief">春泥棒</string>


</resources>