<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAD7E9"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="532dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pic1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/purple_500"
            android:fontFamily="@font/lexend"
            android:text="@string/Persanal_record"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/purple_500"
            android:fontFamily="@font/lexend"
            android:text="@string/Persanal_record_en"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4FC8FC"
            android:fontFamily="@font/lexend"
            android:text="@string/Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4FC8FC"
            android:fontFamily="@font/lexend"
            android:text="@string/Name_en"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4FC8FC"
            android:fontFamily="@font/lexend"
            android:text="@string/Age"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4FC8FC"
            android:fontFamily="@font/lexend"
            android:text="@string/Address"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4FC8FC"
            android:fontFamily="@font/lexend"
            android:text="@string/Hobby"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4FC8FC"
            android:fontFamily="@font/lexend"
            android:text="@string/Skill"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#12E061"
                android:fontFamily="@font/lexend"
                android:text="@string/img_Activity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#12E061"
                android:fontFamily="@font/lexend"
                android:text="@string/Video"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#12E061"
                android:fontFamily="@font/lexend"
                android:text="@string/Music"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#12E061"
                android:fontFamily="@font/lexend"
                android:text="@string/Contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/image" />

            <ImageView
                android:id="@+id/video_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/video" />

            <ImageView
                android:id="@+id/music_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/music" />

            <ImageView
                android:id="@+id/contact_button"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/phone" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>